OneWay_Example/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-vs
spec:
  hosts:
  - "*" # Copy the value in the Gateway hosts
  gateways:
    - helloworld-gw # Gateway Name
  http:
    - match:
        - uri:
            prefix: /istio
      route:
        - destination:
            host: helloworld # The Service DNS name
            subset: version-v1 # The name defined in the DestinationRule
          weight: 100
